@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

' =============================
' ========== MODEL ============
' =============================
package "model" {
  class Usuario {
    - nome: String
    - email: String
    - senha: String
    + fazerLogin(String, String): boolean
  }

  class Cliente extends Usuario {
    - endereco: String
    - carrinho: Carrinho
    + getCarrinho(): Carrinho
  }

  class Administrador extends Usuario {
    - cargo: String
  }

  class Produto {
    - nome: String
    - qtdEstoque: int
    - preco: double
    + verificarDisponibilidade(int): boolean
    + darBaixa(int)
  }

  class Estoque {
    - produtos: List<Produto>
    + adicionarProduto(Produto)
    + listarProdutos()
    + buscarProduto(String): Produto
  }

  class Carrinho {
    - itens: Map<Produto, Integer>
    + adicionarProduto(Produto, int)
    + removerProduto(Produto)
    + calcularTotal(): double
    + getItens(): Map<Produto, Integer>
    + limpar()
  }

  class Pedido {
    - cliente: Cliente
    - itens: Map<Produto, Integer>
    - valorTotal: double
    + exibirResumo()
  }
}

' =============================
' ======== CONTROLLER =========
' =============================
package "controller" {
  class SistemaController {
    - usuarios: List<Usuario>
    - estoque: Estoque
    + cadastrarUsuario(Usuario)
    + login(String, String): Usuario
    + getEstoque(): Estoque
  }
}

' =============================
' ============ VIEW ===========
' =============================
package "view" {
  class MenuPrincipal {
    + {static} main(String[])
  }
}

' =============================
' ======= RELAÇÕES ============
' =============================

' --- Relações do Controller (Composição) ---
' O Controller "possui" e "gerencia" o Estoque e a lista de Usuários
controller.SistemaController "1" *-- "1" model.Estoque : gerencia >
controller.SistemaController "1" *-- "*" model.Usuario : gerencia >

' --- Relações do Model (Composição e Associação) ---
' Cliente "tem um" Carrinho
model.Cliente "1" *-- "1" model.Carrinho : possui >
' Estoque "tem muitos" Produtos
model.Estoque "1" *-- "*" model.Produto : contém >
' Pedido "é feito por um" Cliente
model.Pedido "1" -- "1" model.Cliente : feito por >

' --- Relações de Dependência/Associação (via Map) ---
' O Carrinho e o Pedido usam Produtos como chaves em seus Mapas
model.Carrinho ..> model.Produto : (itens)
model.Pedido ..> model.Produto : (itens)

' --- Relações da View (Dependência) ---
' A View "usa" o Controller para orquestrar as ações
view.MenuPrincipal ..> controller.SistemaController : utiliza >
' A View "cria" e "usa" objetos do Model diretamente
view.MenuPrincipal ..> model.Pedido : cria >
view.MenuPrincipal ..> model.Cliente
view.MenuPrincipal ..> model.Administrador
view.MenuPrincipal ..> model.Produto
view.MenuPrincipal ..> model.Carrinho

@enduml
